Updated readme to include about, purpose and how image was made